[package]
name = "my_contract"
version = "0.1.0"
authors = ["Rupam Dey rpmdey2004@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
cosmwasm-std = "0.14.0"
cosmwasm-storage = "0.14.0"
schemars = "0.8.0"
serde = { version = "1.0.119", features = ["derive"] }
cw-storage-plus = "0.4.0"

[dev-dependencies]
cosmwasm-vm = "0.14.0"
cosmwasm-schema = "0.14.0"